[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "2.3.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }
warp = "0.3.7"
