[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "2.3.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "*", features = ["derive"] }
tera = { version = "1.20.0", features = [], default-features = false }
tokio = { version = "*", features = ["full"] }
toml = "0.8.19"
url = { version = "*", features = ["serde"] }
warp = "0.3.7"
